[gd_scene load_steps=6 format=2]

[ext_resource path="res://screens/GameOverScreen.gd" type="Script" id=1]
[ext_resource path="res://galagaTheme.tres" type="Theme" id=2]
[ext_resource path="res://assets/PressStart2P-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.156863 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="GameOverScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -72.0
margin_top = 32.0
margin_right = 72.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -73.0
margin_right = 72.0
margin_bottom = 73.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YouScored" type="Label" parent="VBoxContainer"]
margin_right = 144.0
margin_bottom = 16.0
text = "You Scored:"
align = 1

[node name="Score" type="Label" parent="VBoxContainer"]
margin_top = 21.0
margin_right = 144.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "Score"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YourName" type="Label" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 144.0
margin_bottom = 58.0
text = "Your Name:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameField" type="LineEdit" parent="VBoxContainer"]
margin_top = 63.0
margin_right = 144.0
margin_bottom = 79.0
custom_styles/normal = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
align = 1
max_length = 15
placeholder_text = "Enter Your Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 144.0
margin_bottom = 100.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 105.0
margin_right = 144.0
margin_bottom = 121.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
